[gd_scene load_steps=2 format=3 uid="uid://dafnpelempya"]

[ext_resource type="Script" path="res://src/ui_components/graphs/bar_graph/bar_graph.gd" id="1_gi2hq"]

[node name="BarGraph" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_gi2hq")

[node name="PositiveValues" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="XAxis" type="HSeparator" parent="."]
layout_mode = 2

[node name="NegativeValues" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
